CHANGE LOG 
=================
Version 1.11 - July 2011
---------------------------------------
* Improved PDF Processing on Advisor prefixes. 
* Improved PDF Processing on Abstract data. 
* Create the ark target based on the originating server.
* New link available at top of ETD edit record page to jump to replace PDF.
* Revised ETD email report to take parameters for school, year and status.
* Set the sender/from email address for "request changes" email to the etd school admin.
* Allow the ark to be saved in the fedora file object DC datastream.

Version 1.10.5 - June 2011 (bugfix)
---------------------------------------
* Use a new local modified version of the mads schema
* Update the url for the cs-xacml-schema-policy-01.xsd 
  so that it is valid outside of apache for the publish script.

Version 1.10.4 - April 2011 (add proxy)
---------------------------------------
* Proxying HTTP requests for XML schemas used in validation is now
  supported in XmlObject.  If you define an appropriate HTTP_PROXY
  environment variable, it will be used for schema validation.  To set
  this via apache conf, use something like this::

  SetEnv HTTP_PROXY tcp://my.proxy.server:3128/

Version 1.10.3 - April 2011 (bugfix)
-------------------------------------
* Created a local copy of cs-xacml-schema-policy-01.xsd.

Version 1.10.2 - April 2011 (enhancement)
-----------------------------------------
* Modified config file schools.xml to allow a new admin asst departmental access.
* The gsearch index has changed to now use risearch to reduce the log output.
* Fixed IE Javascript issues
* Made browser detection recognize Firefox 4

Version 1.10.1 - March 2011 (bugfix)
------------------------------------
* Modified admin checking to allow multiple department names

Version 1.10 - Megagnat, March 2011
-----------------------------------
* RSPH authors may select partnering agencies from a controlled vocabulary